<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EZ记账</string>
    <string name="shortcut_routes_short">线路设置</string>
    <string name="shortcut_routes_long">配置本地和公网线路</string>
    <string name="shortcut_security_short">安全设置</string>
    <string name="shortcut_security_long">配置进入 App 的安全验证</string>
    <string name="shortcut_lock_short">立即锁定</string>
    <string name="shortcut_lock_long">立即进入身份验证</string>
    <string name="shortcut_quick_actions_short">切换快捷入口</string>
    <string name="shortcut_quick_actions_long">显示或隐藏快捷中心入口</string>
</resources>
